# popget

./: .gitignore  Makefile  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.circleci/: config.yml
popget/: __about__.py  __init__.py  client.py  endpoint.py  errors.py  extratypes.py  utils.py
popget/async/: threadpool.py
popget/conf/: __init__.py  defaults.py  settings.py
popget/nonblocking/: threadpool.py
tests/: test_client.py
tests/async/: test_threadpool_client.py
tests/nonblocking/: test_threadpool_client.py
